# ai-agents-exp

./: .gitignore  README.md
agentpay-mesh/: Dockerfile  README.md  diag.mmd  docker-compose.yml  pyproject.toml  store_discovery_inventory.json
agentpay-mesh/src/: ai-agent.json  api_server.py  app.py  config.py  consumer_app.py  db.py  merchant_app.py
agentpay-mesh/src/agent/: auditor.py  concierge.py  graph.py  procurement.py  runner.py  tools.py
agentpay-mesh/tests/: conftest.py  test_agent_gateway.py
architecture_team/: README.md  agent.py  test_architecture.py
multi-agent-fraud-investigation-swarm/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
paywithagent-gateway/: .dockerignore  API.md  Dockerfile  README.md  docker-compose.yml
paywithagent-gateway/src/: ai-agent.json  api_server.py  app.py  config.py  db.py  utils.py
paywithagent-gateway/src/agent/: graph.py  tools.py
paywithagent-gateway/src/xrpl_client/: state.py  wallet.py
secure_rag_agent/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
secure_rag_agent/.streamlit/: config.toml
secure_rag_agent/app/: __init__.py  agent.py  config.py  ingest.py  retrieval.py  utils.py
secure_rag_agent/tests/: test_ingest.py  test_retrieval.py
